--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -26,8 +26,8 @@ jobs:
 
     - name: Deploy to EC2
       run: |
-        echo "${{ secrets.SSHKEY }}" > prod-cn-website.pem
-        chmod 600 prod-cn-website.pem
+        echo "${{ secrets.SSHKEY }}" > my-instance.pem
+        chmod 600 my-instance.pem
         
         ssh -o StrictHostKeyChecking=no -i "my-instance.pem" ubuntu@ec2-13-222-3-13.compute-1.amazonaws.com << 'EOF'
           docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASSWORD }}"
